k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labelflow-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: labelflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: labelflow-service
                port:
                  number: 8000
